--- a/JiaoBaoYun-hb/html/cloud/record_student_main.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_main.html
@@ -784,8 +784,7 @@
 			};
 			delContent_pop(data1, function(data) {
 				console.log('delContent_pop 返回值为 ' + JSON.stringify(data));
-				var temp = data.data;
-				if(data.flag == 1 && temp.RspCode == 0 && temp.RspData.Result == 1) {
+				if(data.flag == 1 && data.data.RspCode == 0 && data.data.RspData.Result == 1) {
 					//删除成功
 					for(var i = 0; i < idsArray.length; i++) {
 						var cellData = studentFile[idsArray[i]];
@@ -793,60 +792,18 @@
 						if(cellData.EncAddr != '') { //有附件
 							var EncAddrArray = cellData.EncAddr.split('|');
 							var EncImgAddrArray = cellData.EncImgAddr.split('|');
-							//qnDelFileArray = qnDelFileArray.concat(EncAddrArray, EncImgAddrArray);
 						}
 					}
-
-					//					if(qnDelFileArray.length != 0) {
-					//						BatchDelete(data.wd);
-					//					} else {
-					delSuccess(data.wd);
-					//					}
+					mui.toast('档案记录删除成功');
+					//退出删除状态
+					quitDel();
+					//获取数据
+					requestData(1, data.wd);
 				} else {
 					events.closeWaiting(data.wd);
-					mui.toast('删除失败 ' + temp.RspTxt);
+					mui.toast(data.data.RspTxt);
 				}
 			});
-		}
-
-		//		/**
-		//		 * 删除对应的七牛文件
-		//		 */
-		//		function BatchDelete(wd) {
-		//			var batchDelete = {
-		//				appId: 6, //int 必填 项目id
-		//				urls: qnDelFileArray //array 必填 需要获取下载token文件的路径
-		//			}
-		//			/**
-		//			 * 七牛批量删除
-		//			 */
-		//			CloudFileUtil.BatchDelete(window.storageKeyName.QNGETTOKENDELETE, batchDelete, function(data) {
-		//					console.log('云端文件删除 ' + JSON.stringify(data));
-		//					if(data.Status == 1) {
-		//						qnDelFileArray = [];
-		//					} else {
-		//						console.log('### ERROR ### 七牛删除失败 ### ' + JSON.stringify(data));
-		//						mui.toast('云端文件删除失败 ' + JSON.stringify(data));
-		//					}
-		//					delSuccess(wd);
-		//				},
-		//				function(xhr, type, errorThrown) {
-		//					console.log('### ERROR ### 请求七牛删除失败 ### ' + JSON.stringify(type));
-		//					mui.toast('请求删除云端文件失败 ' + JSON.stringify(type));
-		//					delSuccess(wd);
-		//				}
-		//			);
-		//		}
-
-		/**
-		 * 删除的所有逻辑处理完后执行的方法
-		 */
-		function delSuccess(wd) {
-			mui.toast('记录删除成功');
-			//退出删除状态
-			quitDel();
-			//获取数据
-			requestData(1, wd);
 		}
 
 		/**
