1、对某专家提问 @专家 2、有的只显示播放按钮的bug

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
@@ -119,6 +119,7 @@
 					//						data.allChannels = tempArr;
 					//						channelData = data.allChannels;
 					UserId = data.expert.UserId;
+					document.getElementById("selectedExpert").innerHTML = data.expert.unick
 				} else {
 
 					UserId = 0;
