--- a/JiaoBaoYun-hb/html/quan/class-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/class-dynamic.html
@@ -286,11 +286,10 @@
 				postDataPro_addClassSpace(postData, wd, function(data) {
 					wd.close();
 					console.log(JSON.stringify(data));
-					if(data.RspCode = '0000') {
+					if(data.RspCode == 0) {
 						mui.toast('发布成功！');
 						document.getElementById('input-content').value = '';
 						events.fireToPageNone('classSpace-sub.html', 'infoChanged');
-						//					mui.fire('classSpace-sub.html','refershData');
 						mui.back();
 					} else {
 						mui.toast(data.RspTxt);
