对某一专家提问 不成功的问题 没有关注的人 显示图片没有关注的人 展现图文混排

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
@@ -120,6 +120,7 @@
 					//						channelData = data.allChannels;
 					UserId = data.expert.UserId;
 					document.getElementById("selectedExpert").innerHTML = data.expert.unick
+					selectedExpert.push(data.expert.UserId)
 				} else {
 
 					UserId = 0;
