--- a/JiaoBaoYun-hb/html/show/show_home_1.html
+++ b/JiaoBaoYun-hb/html/show/show_home_1.html
@@ -18,6 +18,17 @@
 		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
 		<link rel="stylesheet" href="../../css/show/show.css" />
 		<style type="text/css">
+			.nouser {
+				/*无此用户*/
+				position: absolute;
+				text-align: center;
+				color: #808080;
+				z-index: 1;
+				width: 100%;
+				background: white;
+				visibility: visible;
+			}
+			
 			#showSlider {
 				position: absolute;
 				top: 10px;
@@ -99,7 +110,7 @@
 							return;
 						}
 						var self = this
-						events.singleWebviewInPeriod(self,'../quan/pub-dynamic.html', 'zx');
+						events.singleWebviewInPeriod(self, '../quan/pub-dynamic.html', 'zx');
 					})
 				main.addEventListener("hide", function(e) {
 					mui.getPreviewImage().close()
@@ -145,13 +156,13 @@
 
 				//---订制城市---start---
 				//进入订制城市界面
-//				document.getElementById('changeCity').addEventListener('tap', function() {
-//					events.openNewWindowWithData('../utils/customizeCity.html', {
-//						id: '1', //0科教，1展现
-//						webid: '../show/show_home_1.html', //当前webview的id
-//						cities: cities //已经定制的城市数组
-//					});
-//				});
+				//				document.getElementById('changeCity').addEventListener('tap', function() {
+				//					events.openNewWindowWithData('../utils/customizeCity.html', {
+				//						id: '1', //0科教，1展现
+				//						webid: '../show/show_home_1.html', //当前webview的id
+				//						cities: cities //已经定制的城市数组
+				//					});
+				//				});
 
 				//退出订制城市界面返回的数据
 				window.addEventListener('customizeCity', function(e) {
@@ -530,153 +541,153 @@
 				var eduArray = [];
 				var tempArray = [];
 				eduArray.push({
-								acode: 0,
-								aname: '全部',
-								aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
-							});
-							//加入关注的人数据
-							eduArray.push({
-								acode: 1,
-								aname: '关注',
-								aflag: 1, //0为根据省市编码获取数据，1为获取关注的人的列表
-								index: 1, //请求第几页数据
-								isRefresh: 0 //是刷新0，还是加载更多1
-							});
-							cities = eduArray.slice(0); //拷贝数组
-					callBack(cities);
+					acode: 0,
+					aname: '全部',
+					aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
+				});
+				//加入关注的人数据
+				eduArray.push({
+					acode: 1,
+					aname: '关注',
+					aflag: 1, //0为根据省市编码获取数据，1为获取关注的人的列表
+					index: 1, //请求第几页数据
+					isRefresh: 0 //是刷新0，还是加载更多1
+				});
+				cities = eduArray.slice(0); //拷贝数组
+				callBack(cities);
 			}
-//			function requestCustomizationCity(callBack) {
-//				//所需参数
-//				var comData = {
-//					vvl: '1' //订制频道,0科教频道,1展示频道,其他待定
-//				};
-//				// 等待的对话框
-//				var waitingDia = events.showWaiting();
-//				//44.获取个人的订制城市
-//				postDataPro_PostUTcity(comData, waitingDia, function(data) {
-//					var eduArray = [];
-//					var tempArray = [];
-//					console.log('获取个人的订制城市展现频道:' + JSON.stringify(data));
-//					if(data.RspCode == 0) {
-//						if(data.RspData[0].citys && data.RspData[0].citys != "") {
-//							//先通过‘|’将返回值分为数组
-//							tempArray = data.RspData[0].citys.split('|');
-//							//遍历此数组
-//							for(var m in tempArray) {
-//								var tempStr = tempArray[m];
-//								//初始化model
-//								var model_area = {
-//									acode: '', //节点代码,通用6位,前两位为省份编码,中间两位为城市编码,后两位为区县编码
-//									aname: '', //节点名称
-//									aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
-//								};
-//								console.log('tempStr:' + tempStr);
-//								//将分成的每个值，再通过‘_’拆分为model
-//								var tempArea = tempStr.split('_');
-//								model_area.acode = tempArea[0];
-//								model_area.aname = tempArea[1];
-//								//将对应的这个数组的str和model对换，将数组中的值，替换为model数组1
-//								tempArray.splice(m, 1, model_area);
-//
-//							}
-//							eduArray = eduArray.concat(tempArray)
-//							eduArray.push({
-//								acode: 0,
-//								aname: '全部',
-//								aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
-//							});
-//							//加入关注的人数据
-//							eduArray.push({
-//								acode: 1,
-//								aname: '我关注的人',
-//								aflag: 1, //0为根据省市编码获取数据，1为获取关注的人的列表
-//								index: 1, //请求第几页数据
-//								isRefresh: 0 //是刷新0，还是加载更多1
-//							});
-//							console.log('修改后的最终值为:' + JSON.stringify(eduArray));
-//						} else {
-//							eduArray = [];
-//							//如果定制城市为空
-//							var uarea = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).uarea;
-//							console.log(JSON.stringify(uarea));
-//
-//							//加入手机号所在城市
-//
-//							eduArray.push({
-//								acode: uarea.acode,
-//								aname: uarea.aname,
-//								aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
-//							});
-//							eduArray.push({
-//								acode: 0,
-//								aname: '全部',
-//								aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
-//							});
-//							//加入关注的人数据
-//							eduArray.push({
-//								acode: 1,
-//								aname: '我关注的人',
-//								aflag: 1, //0为根据省市编码获取数据，1为获取关注的人的列表
-//								index: 1, //请求第几页数据
-//								isRefresh: 0 //是刷新0，还是加载更多1
-//							});
-//						}
-//					} else {
-//						console.log('无定制城市')
-//						eduArray = [];
-//						//如果定制城市为空
-//						var uarea = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).uarea;
-//						console.log(JSON.stringify(uarea));
-//
-//						var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
-//						console.log('person===' + JSON.stringify(personal));
-//						if(personal && personal.utid != 0) { //有账号，正常登录
-//							//加入手机号所在城市
-//							eduArray.push({
-//								acode: uarea.acode,
-//								aname: uarea.aname,
-//								aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
-//							});
-//							eduArray.push({
-//								acode: 0,
-//								aname: '全部',
-//								aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
-//							});
-//
-//						} else {
-//							eduArray.push({
-//								acode: 0,
-//								aname: '全部',
-//								aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
-//							});
-//
-//						}
-//						//加入关注的人数据
-//						eduArray.push({
-//							acode: 1,
-//							aname: '我关注的人',
-//							aflag: 1, //0为根据省市编码获取数据，1为获取关注的人的列表
-//							index: 1, //请求第几页数据
-//							isRefresh: 0 //是刷新0，还是加载更多1
-//						});
-//						//游客身份
-//						if(!parseInt(myStorage.getItem(storageKeyName.PERSONALINFO).utid)) {
-//							var localCity = window.myStorage.getItem(window.storageKeyName.SHOWCITY);
-//							if(localCity && localCity.length != 0) {
-//								console.log('游客订制的展现城市 ' + JSON.stringify(localCity))
-//								eduArray = localCity.concat(eduArray)
-//							}
-//						}
-//
-//						//						mui.toast(data.RspTxt);
-//					}
-//
-//					console.log(JSON.stringify(eduArray));
-//					cities = eduArray.slice(0); //拷贝数组
-//					callBack(cities);
-//					waitingDia.close();
-//				});
-//			}
+			//			function requestCustomizationCity(callBack) {
+			//				//所需参数
+			//				var comData = {
+			//					vvl: '1' //订制频道,0科教频道,1展示频道,其他待定
+			//				};
+			//				// 等待的对话框
+			//				var waitingDia = events.showWaiting();
+			//				//44.获取个人的订制城市
+			//				postDataPro_PostUTcity(comData, waitingDia, function(data) {
+			//					var eduArray = [];
+			//					var tempArray = [];
+			//					console.log('获取个人的订制城市展现频道:' + JSON.stringify(data));
+			//					if(data.RspCode == 0) {
+			//						if(data.RspData[0].citys && data.RspData[0].citys != "") {
+			//							//先通过‘|’将返回值分为数组
+			//							tempArray = data.RspData[0].citys.split('|');
+			//							//遍历此数组
+			//							for(var m in tempArray) {
+			//								var tempStr = tempArray[m];
+			//								//初始化model
+			//								var model_area = {
+			//									acode: '', //节点代码,通用6位,前两位为省份编码,中间两位为城市编码,后两位为区县编码
+			//									aname: '', //节点名称
+			//									aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
+			//								};
+			//								console.log('tempStr:' + tempStr);
+			//								//将分成的每个值，再通过‘_’拆分为model
+			//								var tempArea = tempStr.split('_');
+			//								model_area.acode = tempArea[0];
+			//								model_area.aname = tempArea[1];
+			//								//将对应的这个数组的str和model对换，将数组中的值，替换为model数组1
+			//								tempArray.splice(m, 1, model_area);
+			//
+			//							}
+			//							eduArray = eduArray.concat(tempArray)
+			//							eduArray.push({
+			//								acode: 0,
+			//								aname: '全部',
+			//								aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
+			//							});
+			//							//加入关注的人数据
+			//							eduArray.push({
+			//								acode: 1,
+			//								aname: '我关注的人',
+			//								aflag: 1, //0为根据省市编码获取数据，1为获取关注的人的列表
+			//								index: 1, //请求第几页数据
+			//								isRefresh: 0 //是刷新0，还是加载更多1
+			//							});
+			//							console.log('修改后的最终值为:' + JSON.stringify(eduArray));
+			//						} else {
+			//							eduArray = [];
+			//							//如果定制城市为空
+			//							var uarea = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).uarea;
+			//							console.log(JSON.stringify(uarea));
+			//
+			//							//加入手机号所在城市
+			//
+			//							eduArray.push({
+			//								acode: uarea.acode,
+			//								aname: uarea.aname,
+			//								aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
+			//							});
+			//							eduArray.push({
+			//								acode: 0,
+			//								aname: '全部',
+			//								aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
+			//							});
+			//							//加入关注的人数据
+			//							eduArray.push({
+			//								acode: 1,
+			//								aname: '我关注的人',
+			//								aflag: 1, //0为根据省市编码获取数据，1为获取关注的人的列表
+			//								index: 1, //请求第几页数据
+			//								isRefresh: 0 //是刷新0，还是加载更多1
+			//							});
+			//						}
+			//					} else {
+			//						console.log('无定制城市')
+			//						eduArray = [];
+			//						//如果定制城市为空
+			//						var uarea = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).uarea;
+			//						console.log(JSON.stringify(uarea));
+			//
+			//						var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
+			//						console.log('person===' + JSON.stringify(personal));
+			//						if(personal && personal.utid != 0) { //有账号，正常登录
+			//							//加入手机号所在城市
+			//							eduArray.push({
+			//								acode: uarea.acode,
+			//								aname: uarea.aname,
+			//								aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
+			//							});
+			//							eduArray.push({
+			//								acode: 0,
+			//								aname: '全部',
+			//								aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
+			//							});
+			//
+			//						} else {
+			//							eduArray.push({
+			//								acode: 0,
+			//								aname: '全部',
+			//								aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
+			//							});
+			//
+			//						}
+			//						//加入关注的人数据
+			//						eduArray.push({
+			//							acode: 1,
+			//							aname: '我关注的人',
+			//							aflag: 1, //0为根据省市编码获取数据，1为获取关注的人的列表
+			//							index: 1, //请求第几页数据
+			//							isRefresh: 0 //是刷新0，还是加载更多1
+			//						});
+			//						//游客身份
+			//						if(!parseInt(myStorage.getItem(storageKeyName.PERSONALINFO).utid)) {
+			//							var localCity = window.myStorage.getItem(window.storageKeyName.SHOWCITY);
+			//							if(localCity && localCity.length != 0) {
+			//								console.log('游客订制的展现城市 ' + JSON.stringify(localCity))
+			//								eduArray = localCity.concat(eduArray)
+			//							}
+			//						}
+			//
+			//						//						mui.toast(data.RspTxt);
+			//					}
+			//
+			//					console.log(JSON.stringify(eduArray));
+			//					cities = eduArray.slice(0); //拷贝数组
+			//					callBack(cities);
+			//					waitingDia.close();
+			//				});
+			//			}
 
 			var requestData = function(cityCode, pageIndex) {
 				var wd = events.showWaiting();
@@ -710,6 +721,12 @@
 
 						if(data.RspData.Data.length > 0) {
 							getPersonIds(data.RspData.Data, cityCode);
+						} else {
+//							document.getElementById("bot_ul_" + cityCode).innerHTML = '<div id="nouser_' + cityCode + '" class="nouser"><img id="nouser_img_1" style="width:200px;height:200px;margin-top: 60px;" src="../../image/mine/invite_none_0.png" /><div id="nouser_text">没有关注人</div></div>';
+//							setTimeout(function() {
+//								wd.close();
+//							}, 1000);
+//							return;
 						}
 
 					}
@@ -783,9 +800,17 @@
 					if(data.RspCode == 0) {
 
 						if(data.RspData.Data.length == 0) {
-							mui.toast('暂无内容')
+							//							mui.toast('暂无内容')
 							var table = document.getElementById("bot_ul_1")
-							table.innerHTML = '';
+							var nouser_img = document.getElementById("nouser_img");
+							table.innerHTML = '<div id="nouser_1" class="nouser"><img id="nouser_img_1" style="width:200px;height:200px;margin-top: 60px;" src="../../image/mine/invite_none_0.png" /><div id="nouser_text">没有关注人</div></div>';
+							for(var i = 0; i < pullToRefresh.length; i++) {
+								var id = pullToRefresh[i].id.replace('bot_sc_', '');
+								if(id == 1) {
+									tempRefresh = pullToRefresh[i];
+								}
+							}
+							tempRefresh.refresh.endPullUpToRefresh(true);
 							return;
 						}
 						var tempModel = cities[cities.length - 1];
