--- a/JiaoBaoYun-hb/html/mine/edit-info.html
+++ b/JiaoBaoYun-hb/html/mine/edit-info.html
@@ -10,7 +10,7 @@
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<link href="../../css/mine/edit-info.css" rel="stylesheet" />
 	</head>
- 
+
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
@@ -19,8 +19,8 @@
 		</header>
 		<div class="mui-content">
 			<div class="input-container">
-			<textarea id="input-content" class="remark-input" type="text" maxlength="20" style="height: 42px;min-height: 42px;" placeholder="请输入,最多20字!" ></textarea>
-			<p class="input-left">20</p>
+				<textarea id="input-content" class="remark-input" type="text" maxlength="20" style="height: 42px;min-height: 42px;" placeholder="请输入,最多20字!"></textarea>
+				<p class="input-left">20</p>
 			</div>
 			<div style="background-color: #00A5E0;height: 1px;margin-left: 2.5%;width: 95%;"></div>
 		</div>
@@ -36,7 +36,7 @@
 			mui.plusReady(function() {
 				events.blurBack();
 				var pInfo = myStorage.getItem(storageKeyName.PERSONALINFO);
-				console.log("要输入的个人信息："+JSON.stringify(pInfo))
+				console.log("要输入的个人信息：" + JSON.stringify(pInfo))
 				var curPage = plus.webview.currentWebview();
 				var title = document.getElementById('title');
 				var btn_save = document.getElementById('save');
@@ -49,7 +49,7 @@
 				})
 			})
 			var postInfo = function(no, inText, pInfo, curpage) {
-				if (jQuery.trim(inText.value).length == 0) {
+				if(jQuery.trim(inText.value).length == 0) {
 					mui.toast('不能为空');
 					return;
 				}
@@ -57,7 +57,7 @@
 				switch(no) {
 					case 0:
 						vtpKey = 'unick';
-						if(events.limitInput(inText.value,20)){
+						if(events.limitInput(inText.value, 20)) {
 							return;
 						}
 						break;
@@ -66,13 +66,13 @@
 						break;
 					case 2:
 						vtpKey = 'utxt';
-						if(events.limitInput(inText.value,30)){
+						if(events.limitInput(inText.value, 30)) {
 							return;
 						}
 						break;
 					case 10:
 						vtpKey = 'uname';
-						if(events.limitInput(inText.value,20)){
+						if(events.limitInput(inText.value, 20)) {
 							return;
 						}
 						break;
@@ -83,7 +83,7 @@
 				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
 				postDataPro_PostReUinf({
 					vtp: vtpKey,
-					vvl:jQuery.trim(inText.value)
+					vvl: jQuery.trim(inText.value)
 				}, wd, function(data) {
 					wd.close()
 					console.log(JSON.stringify(data))
@@ -93,8 +93,7 @@
 						console.log('更改后信息:' + JSON.stringify(pInfo));
 						mui.fire(curpage.opener(), 'infoChanged');
 						events.fireToPageNone('mine.html', 'infoChanged');
-						//						events.fireToPageNone('../index/index.html','infoChanged');
-						events.fireToPageNone('classSpace-sub.html', 'infoChanged');
+						events.fireToPageNone('class_space.html', 'infoChanged');
 						events.fireToPageNone('../cloud/cloud_home.html', 'infoChanged');
 						if(no == 0) {
 							events.fireToPageNone('../cloud/cloud_home.html', 'personChanged');
@@ -105,11 +104,11 @@
 					}
 				})
 			}
-			var setBackHeight=function(length){
-				 document.querySelector(".input-container").style.height="46px";
-				 document.getElementById("input-content").style.height="45px";
-				 document.querySelector(".input-left").innerText=length-document.getElementById("input-content").value.length;
-				 autoTextArea.change(document.querySelector(".input-container"),document.getElementById("input-content"),document.querySelector(".input-left"),length);
+			var setBackHeight = function(length) {
+				document.querySelector(".input-container").style.height = "46px";
+				document.getElementById("input-content").style.height = "45px";
+				document.querySelector(".input-left").innerText = length - document.getElementById("input-content").value.length;
+				autoTextArea.change(document.querySelector(".input-container"), document.getElementById("input-content"), document.querySelector(".input-left"), length);
 			}
 			var setContents = function(no, title, inText, pInfo) {
 				console.log(no)
@@ -123,7 +122,7 @@
 							title.innerText = '填写昵称'
 						}
 						inText.placeholder = '请输入昵称,最多20字'
-						autoTextArea.set( document.querySelector(".input-container"),document.getElementById("input-content"),document.querySelector(".input-left"),20);
+						autoTextArea.set(document.querySelector(".input-container"), document.getElementById("input-content"), document.querySelector(".input-left"), 20);
 						setBackHeight(20);
 						break;
 					case 1:
@@ -146,7 +145,7 @@
 							title.innerText = '填写签名'
 						}
 						inText.placeholder = '请输入签名,最多30字'
-						autoTextArea.set( document.querySelector(".input-container"),document.getElementById("input-content"),document.querySelector(".input-left"),30);
+						autoTextArea.set(document.querySelector(".input-container"), document.getElementById("input-content"), document.querySelector(".input-left"), 30);
 						setBackHeight(30);
 						break;
 					case 10:
@@ -155,7 +154,7 @@
 							title.innerText = '填写用户名';
 						}
 						inText.placeholder = '请填写用户名，只能填写一次，最多20字'
-						autoTextArea.set( document.querySelector(".input-container"),document.getElementById("input-content"),document.querySelector(".input-left"),20);
+						autoTextArea.set(document.querySelector(".input-container"), document.getElementById("input-content"), document.querySelector(".input-left"), 20);
 						setBackHeight(20);
 						break;
 					default:
