--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
@@ -29,8 +29,12 @@
 					</div>
 					<!--问题列表-->
 
-					<ul id="list-container" class="mui-table-view">
+					<ul id="list-container" class="mui-table-view vertical-list display-none">
 					</ul>
+					<div class="noDataDisplay" style=" width: 100%;min-height: 300px; text-align: center;display: none;">
+						<img src="../../image/qiuzhi/qiuzhi_noanswer.png" style="width: 50%; margin: 15% 0 15px;" />
+						<p style="font-size: 1.6rem;">暂无相关话题内容~~</p>
+					</div>
 				</div>
 			</div>
 			<!--发布问题按钮-->
