班级空间发布动态的回调不正确

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -660,7 +660,7 @@
 							document.getElementById("tarClass_" + gid).style.display = 'none';
 							mui.openWindow({
 								url: '../quan/class_space.html',
-								id: '../quan/class_space.html',
+								id: 'class_space.html',
 								styles: {
 									top: '0px', //设置距离顶部的距离
 									bottom: '0px'
