作业  班级空间微调

--- a/JiaoBaoYun-hb/html/quan/classSpace-persons.html
+++ b/JiaoBaoYun-hb/html/quan/classSpace-persons.html
@@ -60,7 +60,7 @@
 			<h1 class="mui-title">标题</h1>
 		</header>
 		<!--列表-->
-		<div class="mui-content mui-scroll-wrapper noOneDisplay">
+		<div class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
 				<ul id="person-list" class="mui-table-view">
 				</ul>
