--- a/JiaoBaoYun-hb/html/homework/homework-tea.html
+++ b/JiaoBaoYun-hb/html/homework/homework-tea.html
@@ -57,7 +57,7 @@
 					<ul id="list-container" class="mui-table-view">
 					</ul>
 				</div>
-				<div class="noDataDisplay" style="background-color: white; width: 100%;min-height: 500px; text-align: center;display: none;">
+				<div class="noDataDisplay" style="background-color: white; width: 100%;min-height: 100%; text-align: center;display: none;">
 					<img src="../../image/qiuzhi/qiuzhi_noanswer.png" style="width: 50%; margin: 25% 0 15px;" />
 					<p style="font-size: 1.6rem;">暂无作业~~</p>
 				</div>
