关闭h5的引用，班级空间，个人空间查看的人和点赞的人 修改返回逻辑

--- a/JiaoBaoYun-hb/html/homework/homework-tea.html
+++ b/JiaoBaoYun-hb/html/homework/homework-tea.html
@@ -68,7 +68,7 @@
 		<script src="../../js/utils/switch-mine.js"></script>
 		<!--公共事件方法库-->
 		<script src="../../js/utils/events.js"></script>
-		<script src="../../js/utils/h5fresh.js"></script>
+		<!--<script src="../../js/utils/h5fresh.js"></script>-->
 		<script src="../../js/publicProtocol.js"></script>
 		<script src="../../js/mui.pullToRefresh.js"></script>
 		<script src="../../js/mui.pullToRefresh.material.js"></script>
