--- a/JiaoBaoYun-hb/html/qiuzhi/AttentionPersons.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/AttentionPersons.html
@@ -30,7 +30,7 @@
 
 		<script src="../../js/mui.min.js"></script>
 		<!--h5刷新js-->
-		<script src="../../js/utils/h5fresh.js"></script>
+		<!--<script src="../../js/utils/h5fresh.js"></script>-->
 		<!--公共事件js-->
 		<script src="../../js/utils/events.js"></script>
 		<!--公共接口js-->
