--- a/JiaoBaoYun-hb/html/quan/class_space.html
+++ b/JiaoBaoYun-hb/html/quan/class_space.html
@@ -65,7 +65,7 @@
 		<!--图片预览js-->
 		<script src="../../js/mui.zoom.js"></script>
 		<script src="../../js/mui.previewimage.js"></script>
-		<script src="../../js/utils/h5fresh.js"></script>
+		<!--<script src="../../js/utils/h5fresh.js"></script>-->
 		<script src="../../js/utils/video.js"></script>
 		<script src="../../js/mui.pullToRefresh.js"></script>
 		<script src="../../js/mui.pullToRefresh.material.js"></script>
