展现有时删除动态不成功的问题 如动态被删除 查看动态详情时加提示

--- a/JiaoBaoYun-hb/html/quan/space-detail.html
+++ b/JiaoBaoYun-hb/html/quan/space-detail.html
@@ -45,7 +45,7 @@
 	</body>
 
 	<script>
-		var isPersonal=0
+		var isPersonal = 0
 		var sliderId = 'top_';
 		idFlag = '';
 		var datasource = {}; //此界面的数据
@@ -196,6 +196,8 @@
 						}
 					});
 
+				} else {
+					mui.toast(data.RspTxt);
 				}
 			})
 		}
